--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
@@ -21,17 +21,17 @@
         <a href="https://www.facebook.com/sharer/sharer.php?u={{questionObj.shareUrl}}&title={{questionObj?.title}}&description={{answerTagsRemoved}}"
            class="SHARE FACEBOOK"
            onclick='window.open(this.href, "popupwindow", "width=800,height=500,left=200,top=5,scrollbars,toolbar=0,resizable");return false;' target="social">
-            <img class="social-image" id="img1" src="../images/facebooklogo.jpg" />
+            <img class="social-image" id="img1" src="../images/facebooklogo.svg" />
         </a>
 
         <a href="https://twitter.com/home?status={{questionObj.shareUrl}}"
            class="SHARE TWITTER"
            onclick='window.open(this.href, "popupwindow", "width=800,height=500,left=200,top=5,scrollbars,toolbar=0,resizable");return false;' target="social">
-            <img class="social-image" id="img2" src="../images/twitter.png" />
+            <img class="social-image" id="img2" src="../images/twitter.svg" />
         </a>
         <a href="http://www.linkedin.com/shareArticle?mini=true&url={{questionObj.shareUrl}}&title={{questionObj?.title}}&summary={{answerTagsRemoved}}"
            onclick='window.open(this.href, "popupwindow", "width=800,height=500,left=200,top=5,scrollbars,toolbar=0,resizable");return false;' target="social">
-            <img class="social-image" id="img3" src="../images/linkedin.png" />
+            <img class="social-image social-image-linkedin" id="img3" src="../images/linkedin.svg" />
         </a>
 
         <div class="other-function" id="img4">
