Blog create validation issue fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-create/blog-create.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-create/blog-create.component.html
@@ -23,7 +23,7 @@
     }
 </style>
 <div #logginAnchor></div>
-<form (ngSubmit)="saveBlog()" #blogForm="ngForm">
+<form (ngSubmit)="saveBlog(blogForm)" #blogForm="ngForm">
     <div class="form-horizontal" *ngIf="isOwner">
         <div class="form-group">
             <label class="control-label col-sm-3"> Nombre del blog*</label>
