--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/DeleteCategory.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/DeleteCategory.cshtml
@@ -79,7 +79,7 @@
                 async: false,
                 success: function (respText) {
                     console.log(respText);
-                    alertify.alert(' deleted successfully',
+                    alertify.alert('Deleted successfully',
                         function () {
                             location.reload(true);
                         });
