--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -330,6 +330,7 @@
                                     </a>
                                 </li>
                                 <li><a href="@Url.Action("AddKeyword", "Category", new {Area = "Admin"})"><span class="fa-stack fa-lg pull-left"><i class="fa fa-flag fa-stack-1x "></i></span>EditCategory</a></li>
+                                <li><a href="@Url.Action("EditTopic", "Category", new {Area = "Admin"})"><span class="fa-stack fa-lg pull-left"><i class="fa fa-flag fa-stack-1x "></i></span>EditTopic</a></li>
                                 <li>
                                     <a href="@Url.Action("DeleteCategory", "Category", new {Area = "Admin"})">
                                         <span class="fa-stack fa-lg pull-left">
