--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
@@ -109,6 +109,7 @@ a {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     padding-left: 15px;
+    padding-right:15px;
 }
 
 .form-group {
