akash:Topfive user fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
@@ -23,7 +23,7 @@
         </div>
         <div id="leftPanel">
             <topfive-question-left-menu> </topfive-question-left-menu>
-            <topfive-topic></topfive-topic>
+            <topfive-topic [isHomePage]="true" ></topfive-topic>
             <category-left-menu [caegoryId]="id"></category-left-menu>
         </div>
     </div>
@@ -38,7 +38,7 @@
         <div class="tab" *ngFor="let question of questions">
             <question-panel [question]="question"></question-panel>
         </div>
-        <!-- For Hover pop up get some space to show -->
+        <!-- For Hover pop up get some space to show [isHomePage]="true" -->
         <div class="hidden-xs" style="height:200px;position:relative;"></div>
     </div>
 </div>
