Question etails bug fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
@@ -83,7 +83,7 @@
     </div>
 </div>
 <div *ngIf="showQuestionEditForm">
-    <div class="center-width center-body z-ground">
+    <div class="center-width center-body center-fix z-ground">
         <form (ngSubmit)="updateQuestion()" #questionVM="ngForm">
             <question-header [question]="question"></question-header>
             <h1 class="question-title">
