akash:responsive of login and regirstraion pages

--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/Register.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/Register.cshtml
@@ -36,12 +36,7 @@
         </div>
     </form>*@
 <style>
-    .loginForm {
-        opacity: .95;
-        margin-top: 63px;
-        width: 674px;
-        margin-left: -135px;
-    }
+   
 
     .form-horizontal {
         border-radius: 10px;
@@ -58,11 +53,7 @@
         font-size: 21px;
     }
 
-    .form-control {
-        background-color: #cccccc;
-        height: 41px;
-        border-radius: 7px;
-    }
+   
 
     .btn-default {
         background-color: #fba409;
@@ -82,7 +73,7 @@
         @*<img class="left-border" src="~/images/border.png" />*@
         .
     </div>
-    <div class="col-md-4 loginForm">
+    <div class="col-md-4 registrationForm">
 
         <section>
 
