following, follower  responsive , posted question added, search responsive icon added

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/following/following.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/following/following.component.html
@@ -4,7 +4,7 @@
     }
 </style>
 <div class="row row-fix">
-    <div class="col-md-4 row-gap" *ngFor="let usr of user">
+    <div class="col-md-4 row-gap width-xs" *ngFor="let usr of user">
         <user-info [userObj]="usr"></user-info>
     </div>
 </div>
