--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
@@ -32,7 +32,8 @@
             </div>
 
             <button type="submit" class="ask-button fixed-height" [disabled]="!titleName.valid">
-                <span class="glyphicon glyphicon-search" aria-hidden="true"></span><span class="ask-text hidden-xs">Enviar</span>
+                <span class="glyphicon glyphicon-question-sign visible-xs" aria-hidden="true"></span>
+                <span class="glyphicon glyphicon-search hidden-xs" aria-hidden="true"></span><span class="ask-text hidden-xs">Enviar</span>
             </button>
         </form>
     </div>
