--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/question-body.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/question-body.less
@@ -102,8 +102,7 @@ hr {
     height: 120px;
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
-    margin-top: 25%;
-    margin-left: 45%;
+    margin:25% auto;
 }
 
 @-webkit-keyframes spin {
