--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/shared_userinfo.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/shared_userinfo.less
@@ -5,8 +5,7 @@
     margin-left:5px;
 }
 .user-info {
-    /*padding-top: 15px;*/
-    max-width:75%;
+    max-width:70%;
     padding-left:15px;
     float: left;
     display: block;
@@ -19,13 +18,13 @@
     content: "";
     clear: both;
 }
-
 .user-image {
     height: 50px;
     width: 50px;
     border-radius: 25px;
     margin-top: 5px;
     margin-bottom: 5px;
+    float:left;
 }
 
 .user-detail {
