--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/follower/follower.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/follower/follower.component.html
@@ -2,9 +2,10 @@
     .row-gap {
         margin-top: 5%;
     }
+    
 </style>
 <div class="row row-fix ">
-    <div class="col-md-4 row-gap" *ngFor="let usr of user">
+    <div class="col-md-4 row-gap width-xs" *ngFor="let usr of user">
         <user-info [userObj]="usr"></user-info>
     </div>
 </div>
