akash:Comment bug fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/answer-submit/answer-submit.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/answer-submit/answer-submit.component.html
@@ -29,6 +29,9 @@
     .save-as-draft {
             background-color: #b9caba;
     }
+    .header-info {
+            margin-left: 70px;
+    }
 </style>
 <form #answerVM="ngForm" class="form-horizontal " role="form">
     <div class="modal-header">
