--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/DeleteCategory.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/DeleteCategory.cshtml
@@ -66,7 +66,7 @@
 <script>
     function DeleteCategory(element, categoryId) {
 
-        alertify.confirm("Do you really want to delete?", function () {
+        @*alertify.confirm("Do you really want to delete?", function () {
             //user clicked "ok"
             var url = '@Url.Action("DeleteCategory", "Category", new { Area = "Admin" })';
             var obj = {};
@@ -92,11 +92,34 @@
 
         }, function () {
             // user clicked "cancel"
-        });
-        //var confrimDelete = confirm("Do you really want to delete?");
-        //if (confrimDelete == true) {
+        });*@
+        var confrimDelete = confirm("Do you really want to delete?");
+        if (confrimDelete == true) {
+            //user clicked "ok"
+            var url = '@Url.Action("DeleteCategory", "Category", new { Area = "Admin" })';
+            var obj = {};
+            obj.categoryId = categoryId;
+            console.log(obj);
+            $.ajax({
+                url: url,
+                type: 'POST',
+                data: obj,
+                async: false,
+                success: function (respText) {
+                    console.log(respText);
+                    //alertify.alert('Deleted successfully',
+                    //    function () {
+                    //        location.reload(true);
+                    //    });
+                    alert('Deleted successfully');
+                    location.reload(true);
 
-        // }
+                },
+                error: function (jqXhr, textStatus, errorThrown) {
+
+                }
+            });
+         }
 
     }
 </script>
