--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Manage/Index.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Manage/Index.cshtml
@@ -4,11 +4,13 @@
 }
 
 <h2>@ViewData["Title"].</h2>
-<p class="text-success">@ViewData["StatusMessage"]</p>
+
 
 <div class="form-horizontal" role="form">
+    <p class="text-success">@ViewData["StatusMessage"]</p>
+    <p><a href="http://altap.azurewebsites.net/">Go Back to Site</a></p>
     <h4>Change your account settings</h4>
-    <hr />
+    <hr/>
 
     <div class="row">
         <div class="col-lg-1">Password:</div>
