--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Shared/_Layout.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Shared/_Layout.cshtml
@@ -119,8 +119,13 @@
         .navbar-brand {
             color: #0c0c0c;
         }
+
         .jumbotron {
-           margin-top: 18px;
+            margin-top: 18px;
+        }
+
+        .form-control {
+            width: 346px;
         }
     </style>
 </head>
