--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/nav-bar/nav-bar.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/nav-bar/nav-bar.component.html
@@ -46,7 +46,10 @@
                     <div class="form-group">
                         <div class="lef-column padding-middle"><span class="fa fa-user"></span> <a (click)="gotoProfile()" for="contain" data-toggle="dropdown" class="padding-middle"> Profile</a></div>
                     </div>
-
+                    <!--<a id="userUrl" href="http://altaauth.azurewebsites.net/Manage/ChangePassword"><span class="fa fa-key"></span> Change Password</a>-->
+                    <div class="form-group">
+                        <div class="lef-column padding-middle"><span class="fa fa-key"></span> <a href="http://altaauth.azurewebsites.net/Manage/ChangePassword" for="contain" class="padding-middle"> Change Password </a></div>
+                    </div>
                     <div class="form-group">
                         <div class="lef-column padding-middle"><span class="fa fa-sign-out"></span> <a href="/signout" for="contain" class="padding-middle" > Sign Out </a></div>
                     </div>
