--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -2,7 +2,18 @@
     ViewData["Title"] = "Forgot Password Confirmation";
 }
 
-<h2>@ViewData["Title"].</h2>
-<p>
-    Please check your email to reset your password.
-</p>
+@*<h2>@ViewData["Title"].</h2>*@
+
+
+<form class="form-horizontal" role="form">
+    <h1>@ViewData["Title"].</h1>
+    <hr />
+    <div class="form-group">
+        <div class="col-md-10">
+            <p>
+                Please check your email to reset your password.
+            </p>
+        </div>
+
+    </div>
+</form>
