--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/Register.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/Register.cshtml
@@ -102,7 +102,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-1 col-md-10">
-                        <button type="submit" class="btn btn-default">Sign Up</button>
+                        <button type="submit" class="btn btn-xm">Sign Up</button>
                     </div>
                 </div>
 
