--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/ResetPasswordConfirmation.cshtml
@@ -2,7 +2,16 @@
     ViewData["Title"] = "Reset password confirmation";
 }
 
-<h1>@ViewData["Title"].</h1>
-<p>
-    Your password has been reset. Please <a asp-controller="Account" asp-action="Login">Click here to log in</a>.
-</p>
+
+
+<form class="form-horizontal" role="form">
+    <h1>@ViewData["Title"].</h1>
+    <hr />
+    <div class="form-group">
+        <div class="col-md-10">
+            Your password has been reset. Please <a asp-controller="Account" asp-action="Login">Click here to log in</a>.
+        </div>
+
+    </div>
+</form>
+
