User list for search component added

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/topfive-user.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/topfive-user.component.html
@@ -20,21 +20,15 @@
     <img class="horizontal-border" src="../../../../images/border-horizontal.png" />
     <ul class="user-list" *ngIf="topFiveUsers.length>0">
         <li *ngFor="let topFiveUser of topFiveUsers">
-
             <img class="user-image img-circle" src="{{topFiveUser?.imageUrl}}" (mouseover)='userover(topFiveUser?.id)' [popover]="userInfoDetailsPopoveruser" [popoverOnHover]="true" [popoverCloseOnClickOutside]="true" />
             <div class="top-user-info">
-                <!--<a [routerLink]="['/dashboard/viewprofile/',topFiveUser.userid,'user-question']"> {{topFiveUser?.name}}</a>-->
                 <a (click)="gotoProfile(topFiveUser?.userId)" for="contain" data-toggle="dropdown" class="padding-middle"> {{topFiveUser?.name}}</a>
-
-
-                <!--{{topFiveUser?.name}}-->
                 <span *ngIf="topFiveUser.occupation">,{{topFiveUser.occupation}}</span>
                 <div>{{topFiveUser.profileViewCount}} vistas</div>
             </div>
             <div class="clearfix"></div>
-
-
         </li>
+        <li><h3><a (click)="goToAllUser()">View all users</a></h3></li>
     </ul>
 </div>
 <popover-content #userInfoDetailsPopoveruser>
@@ -49,7 +43,6 @@
                         <br />
                         <span style="font-size: 12px;"> {{userInfoDetails?.title}}</span>
                     </div>
-                    <!--<div class="user-detail light-gray">{{viewDate | date: 'dd MMM, yyyy'}}</div>-->
                 </div>
             </li>
 
@@ -77,9 +70,7 @@
 
                 <li *ngIf="userInfoDetails?.questionViewCount!=0">
                     <i class="fa-li fa fa-eye">
-
                     </i>Question Views: {{userInfoDetails?.questionViewCount}}
-
                 </li>
             </ul>
         </div>
