--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
@@ -34,7 +34,7 @@
             <img class="social-image social-image-linkedin" id="img3" src="../images/linkedin.svg" />
         </a>
 
-        <div class="other-function" id="img4">
+        <div class="other-function hidden-xs" id="img4">
             <a [popover]="otherFunctionPop">...</a>
             <popover-content #otherFunctionPop
                              placement="top"
