--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/social-bar.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/social-bar.less
@@ -24,6 +24,11 @@
 .left-border {
     float: left;
 }
+@media only screen and (max-width:767px) {
+    .social-icon{
+        width:75px;
+    }
+}
 /*.questions-container {
     
 }*/
