--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Manage/ChangePassword.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Manage/ChangePassword.cshtml
@@ -11,7 +11,7 @@
 </style>
 <form asp-controller="Manage" asp-action="ChangePassword" method="post" class="form-horizontal" role="form">
     <h4>Change Password Form</h4>
-    <hr />
+    <hr class="hidden-xs"/>
     @*<div asp-validation-summary="All" class="text-danger"></div>*@
     <div class="form-group">
         <label asp-for="OldPassword" class="col-md-2 control-label"></label>
