--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -75,7 +75,8 @@
                     <ul class="left-panel-list">
                         <li class=""><a routerLink="/">Alta Perspectiva</a></li>
                         <li><a routerLink="/question/home/1">Questions</a></li>
-                        <li><a (click)="scrolToCredentials()"> Profile Statistics</a></li>
+                        <li *ngIf="_logObj.isLoggedIn"><a href="/signout"> Sign Out </a></li>
+                        <li *ngIf="!_logObj.isLoggedIn"><a href="/signin">Log in</a></li>
                     </ul>
                 </div>
                 <ul id="profile-route" class="profile-leftmenu">
