--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -61,7 +61,9 @@
         <ul class="left-panel-list">
             <li class=""><a routerLink="/">Alta Perspectiva</a></li>
             <li><a routerLink="/question/home/1">Questions</a></li>
-            <li><a (click)="gotoProfile()"> Profile</a></li>
+            <li *ngIf="_logObj.isLoggedIn"><a (click)="gotoProfile()"> Profile</a></li>
+            <li *ngIf="_logObj.isLoggedIn"><a href="/signout"> Sign Out </a></li>
+            <li *ngIf="!_logObj.isLoggedIn"><a href="/signin">Log in</a></li>
         </ul>
     </div>
     <category-left-menu [caegoryId]="categoryId"></category-left-menu>
