--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/like-modal/like.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/like-modal/like.component.html
@@ -3,12 +3,14 @@
         margin: 10% auto;
         max-width: 25%;
     }
+
     .like-user-image {
-    height: 50px;
-    width: 50px;
-    border-radius: 25px;
-    margin-bottom: 5px;
-}
+        height: 50px;
+        width: 50px;
+        border-radius: 25px;
+        margin-bottom: 5px;
+    }
+
     .profile-modal-body {
         position: relative;
         padding: 15px;
@@ -46,6 +48,12 @@
     .col-sm-8 {
         padding-left: 0;
     }
+
+    @media screen and (max-width:767) {
+        .credential-dialog {
+            max-width: 95%;
+        }
+    }
 </style>
 
 <div class="modal-overlay z-modal" id="dialogModal" (click)="handleClick($event)">
@@ -58,17 +66,13 @@
             </div>
             <div class="modal-body">
                 <div *ngFor="let user of likedUsers">
-                    
-                        <img class="like-user-image img-circle img" src="{{user?.imageUrl}}" />
-                        {{user?.name}}
-                    
+
+                    <img class="like-user-image img-circle img" src="{{user?.imageUrl}}" />
+                    {{user?.name}}
+
                     <br />
                 </div>
             </div>
-            <div class="modal-footer">
-                .
-            </div>
-
         </div>
     </div>
 </div>
