--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Shared/_Layout.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Shared/_Layout.cshtml
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Altaperspectiva.OpenId</title>
-
-    <environment names="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="~/lib/bootstrap-touch-carousel/dist/css/bootstrap-touch-carousel.css" />
-        <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap-touch-carousel/dist/css/bootstrap-touch-carousel.css" />
+    <link rel="stylesheet" href="~/css/site.css" />
+    @*<environment names="Development">
+       
     </environment>
     <environment names="Staging,Production">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.0.0/css/bootstrap.min.css"
@@ -18,7 +18,7 @@
               asp-fallback-href="~/lib/bootstrap-touch-carousel/css/bootstrap-touch-carousel.css"
               asp-fallback-test-class="carousel-caption" asp-fallback-test-property="display" asp-fallback-test-value="none" />
         <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    </environment>
+    </environment>*@
     <style>
         .body-minHeight {
             min-height: 79vh;
