--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-create/blog-create.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-create/blog-create.component.html
@@ -70,7 +70,7 @@
             <div class="col-md-4" *ngFor="let blog of blogs">
                 <div (click)="goToBlogPost(blog.id)" class="blog-list-panel">
                     <h2>{{blog?.title}}</h2>
-                    <a class="btn btn-primary" [routerLink]="['/dashboard/blog-post',blog.id]">Create Post</a>
+                    <a class="btn btn-primary" (click)="goToBlogPost(blog.id)">Create Post</a>
                 </div>
             </div>
            
